[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max_line_length = 120
max_doc_length = 140
exclude =
	.git,
	__pycache__,
	venv
	.mypy_cache,
	build,
	dist
ignore =
	E203,
	E221,
	E241,
	F541,
	W503,
	W504

[mypy]
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
